tests/Rules/Structure/Fixtures/invalid/list_non_li.html.twig
{# 1 errors #}
<ul>
  <div>Bad</div>
</ul>
